Displaying Username with cookie-parser

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -21,6 +21,7 @@
           <input placeholder="username" name="username" type="text" />
           <button type="submit">Sign In</button>
         </form>
+        <p><%= username %></p>
       </div>
     </div>
   </nav>
