--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,16 +16,13 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
+        <a class="nav-item nav-link" href="/login">Login</a>
       </div>
-      <% if (username) { %>
-      <a class="d-flex ml-auto p-2">Logged in as: <%= username %></a>
+      <% if (user) { %>
+      <a class="d-flex ml-auto p-2">Logged in as: <%= user.email %></a>
       <form method="POST" action="/logout">
         <button type="submit" class="btn btn-dark">Logout</button>
-      </form>
-      <% } else {%>
-      <form method="POST" action="/login" class="d-flex ml-auto p-2">
-        <input placeholder="username" name="username" type="text" />
-        <button type="submit" class="btn btn-primary">Sign In</button>
       </form>
       <% } %>
     </div>
