--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,7 +23,8 @@
       </div>
       <div class="card-footer text-muted">
         <h5>Edit</h5>
-        <form method="POST" action="/urls/<%= id %>/edit">
+        <!-- <form method="POST" action="/urls/<%= id %>/edit"> ORIGINAL LINE -->
+        <form method="POST" action="/urls/<%= id %>?_method=PUT">
           <label for="">New URL:</label>
           <input placeholder="http://" type="text" name="longURL" />
           <button class="btn btn-primary" type="submit">Submit</button>
