--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,7 +23,6 @@
       </div>
       <div class="card-footer text-muted">
         <h5>Edit</h5>
-        <!-- <form method="POST" action="/urls/<%= id %>/edit"> ORIGINAL LINE -->
         <form method="POST" action="/urls/<%= id %>?_method=PUT">
           <label for="">New URL:</label>
           <input placeholder="http://" type="text" name="longURL" />
@@ -41,7 +40,7 @@
             </tr>
           </thead>
           <tbody>
-            <% for (let i = 1; i < urlVisitCounter; i++){ %>
+            <% for (let i = 1; i < userVisitCounter; i++){ %>
             <tr>
               <td><%= i %></td>
               <td><%= user.id %></td>
