--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -25,12 +25,13 @@
       <h3>Create TinyURL</h3>
       <form class="form-inline" action="/urls/" method="POST">
         <div class="form-group mb-2">
-          <label for="longURL">Enter a URL:</label>
+          <label for="longURLName">Enter a URL:</label>
           <input
             class="form-control"
             type="text"
             name="longURL"
             placeholder="http://"
+            id="longURLName"
             style="width: 300px; margin: 1em"
           />
           <button type="submit" class="btn btn-primary">Submit</button>
